<?xml version="1.0"?>
<package format="3">
  <name>delivery_interfaces</name>
  <version>0.1.0</version>
  <description>Messages, services, and actions for the delivery robot</description>
  <maintainer email="ahmed22khelifi@gmail.com">ahmed</maintainer>
  <license>Apache-2.0</license>

  <!-- REQUIRED for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generators and interface deps -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Runtime deps -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- (optional) lint/test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>