<?xml version="1.0"?>
<package format="3">
  <name>mission_nodes</name>
  <version>0.1.0</version>
  <description>Mission planner node (action client).</description>
  <maintainer email="mariemjabberi94@gmail.com">mariem_jabberi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>delivery_interfaces</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
