<package format="3">
  <name>sensor_nodes</name>
  <version>0.0.1</version>
  <description>Sensor monitoring nodes</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>


